src/objects/Document_Helper__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Document Helpers</relationshipLabel>
        <relationshipName>Document_Helpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Board_Meeting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Board Meeting</label>
        <referenceTo>Board_Meeting__c</referenceTo>
        <relationshipLabel>Document Helpers</relationshipLabel>
        <relationshipName>Document_Helpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Document Helpers</relationshipLabel>
        <relationshipName>Document_Helpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ConvertToDocuments__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ConvertToDocuments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Documents_Folder_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Documents Folder Template</label>
        <referenceTo>Documents_Folder_Template__c</referenceTo>
        <relationshipLabel>Document Helpers</relationshipLabel>
        <relationshipName>Document_Helpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Investment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Investment</label>
        <referenceTo>Investment__c</referenceTo>
        <relationshipLabel>Document Helpers</relationshipLabel>
        <relationshipName>Document_Helpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Document Helpers</relationshipLabel>
        <relationshipName>Document_Helpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Round__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Round</label>
        <referenceTo>Round__c</referenceTo>
        <relationshipLabel>Document Helpers</relationshipLabel>
        <relationshipName>Document_Helpers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Sensitivity__c</fullName>
        <label>Sensitivity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Restricted</fullName>
                    <default>true</default>
                    <label>Restricted</label>
                </value>
                <value>
                    <fullName>Public</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Document Helper</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DH-{00000}</displayFormat>
        <label>Document Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Helpers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>